# ospsd-team4-fall2025

./: .gitignore  LICENSE  README.md  file_structure.docx  main.py  mkdocs.yml  pyproject.toml
.circleci/: config.yml
.github/: pull_request_template.md
clients/python/mail_client_service_client/: client.py
clients/specs/: openapi.json
docs/: circleci-setup.md  index.md
docs/architecture/: dependency-injection.md  design-philosophy.md  testing.md
docs/getting-started/: index.md
docs/reference/: email-api.md  exceptions.md  gmail-client.md  gmail-config.md  gmail-impl.md  interfaces.md  models.md
scripts/: export_openapi.py
src/: component.md
src/email_api/: README.md  __init__.py  client.py  pyproject.toml
src/email_api/src/email_api/: __init__.py  client.py  exceptions.py  interfaces.py  models.py
src/email_api/tests/: __init__.py  test_api.py  test_exceptions.py  test_interfaces.py  test_models.py
src/gmail_impl/: README.md  __init__.py  gmail_client.py  pyproject.toml
src/gmail_impl/examples/: __init__.py  basic_usage.py
src/gmail_impl/src/gmail_impl/: __init__.py  client.py  config.py  gmail_client.py
src/gmail_impl/tests/: __init__.py  test_client.py  test_config.py  test_gmail_client.py
src/mail_client_adapter/: pyproject.toml
src/mail_client_adapter/src/mail_client_adapter/: __init__.py  adapter.py  mapping.py
src/mail_client_adapter/tests/: test_adapter_unit.py
src/mail_client_service/: __init__.py  pyproject.toml
src/mail_client_service/src/mail_client_service/routes/: messages.py
src/mail_client_service/tests/: conftest.py  test_messages.py
tests/: __init__.py  conftest.py
tests/e2e/: test_email_workflows.py
tests/integration/: test_gmail_integration.py
