[project]
name = "email-api"
version = "0.1.0"
description = "Protocol-based email client interface for dependency injection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_api"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--cov=src/email_api",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

# Coverage configuration  
[tool.coverage.run]
source = ["src/email_api"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
