[project]
name = "email-api"
version = "0.1.0"
description = "Email client interface with ABC-based contracts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_api"]
