[project]
name = "gmail-impl"
version = "0.1.0"
description = "Gmail implementation of the email client interface"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "email-api>=0.1.0",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.100.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmail_impl"]
